Archive2/df/ccb0dd9b19b2eb/output
main.cpp:6:5: error: no matching function for call to 'g'
    g<D>(&D::f);
    ^~~~
main.cpp:3:39: note: candidate template ignored: could not match 'D' against 'B'
template<typename T, typename R> void g(R T::*);
                                      ^
1 error generated.
